--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="D:\workspace\semantic\dist\semantic.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="D:\workspace\semantic\dist\semantic.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="./css/contact.css">
+  <link rel="stylesheet" type="text/css" href="css/contact.css">
 
 </head>
 <body>
