--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="D:\workspace\semantic\dist\semantic.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="D:\workspace\semantic\dist\semantic.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="./css/responsive.css">
-	<link rel="stylesheet" type="text/css" href="./css/home.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
+	<link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 <body>
 	<div class="ui  grid " id="aa">
