--- a/signin.html
+++ b/signin.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>Signin</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="./dist/semantic.min.css">
-<link rel="stylesheet" type="text/css" href="./css/signin.css">
+<link rel="stylesheet" type="text/css" href="../dist/semantic.min.css">
+<link rel="stylesheet" type="text/css" href="css/signin.css">
 
 </head>
 <body>
@@ -34,7 +34,7 @@
   </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="dist/semantic.min.js"></script>
+<script src="../dist/semantic.min.js"></script>
 <script>
 function validate(){
     $('.ui.form').form({
